# graphics-env

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  external-dependancies.cmake
cmake/: copy-libs.cmake  copy-resources.cmake  project-setup.cmake
example/: CMakeLists.txt  animated_models.cpp  app.cpp  app.h  asset_pools.cpp  main.cpp  minimum.cpp  switch_scenes.cpp
examples/: CMakeLists.txt  animated_models.cpp  asset_pools.cpp  basic.cpp  custom_pipeline.cpp  gooch_shading.cpp  helper.h  minimum.cpp  spirv_testing.cpp  switch_scenes.cpp
examples/shaders/ogl-shaders/: gooch.frag
examples/shaders/vk-shaders/: cmp.sh  gooch.frag  gooch.frag.spv
include/: input.h  manager.h
include/game/: random.h
include/graphics/: manager.h  model_gen.h
include/resources/model/: model_animation.h
libs/: CMakeLists.txt
libs/GameHelper/: CMakeLists.txt
libs/GameHelper/demo/: CMakeLists.txt  demo.cpp  timer_demo.cpp
libs/GameHelper/include/GameHelper/: camera.h  controller.h  input.h  random.h  timer.h  vector_maths.h
libs/GameHelper/include/game/: camera.h  input.h  timer.h
libs/GameHelper/src/: CMakeLists.txt  audio.h  camera.cpp  camera.h  controller.cpp  input.h  mouse.cpp  random.cpp  timer.cpp  timer.h
libs/Graphics/: CMakeLists.txt
libs/Graphics/libs/: CMakeLists.txt
libs/Graphics/libs/OpenGL-Environment/: .gitattributes  .gitignore  CMakeLists.txt  README.md
libs/Graphics/libs/OpenGL-Environment/resources/buildscripts/linux/: README.md  debug.sh  debugMingw.sh  debugMingw.sh~  release.sh
libs/Graphics/libs/OpenGL-Environment/resources/buildscripts/windows/: README.md  debug.bat  release.bat
libs/Graphics/libs/OpenGL-Environment/resources/mingw-dlls/: OpenGL-Environment
libs/Graphics/libs/OpenGL-Environment/resources/shaders/: 3D-lighting.vert
libs/Graphics/libs/OpenGL-Environment/src/: CMakeLists.txt  ogl_helper.h  render.cpp  render.h
libs/Graphics/libs/OpenGL-Environment/src/resources/: font_loader.cpp  font_loader.h  model_render.cpp  model_render.h  texture_loader.cpp  texture_loader.h  vertex_data.cpp  vertex_data.h
libs/Graphics/libs/OpenGL-Environment/test/: CMakeLists.txt  test.cpp
libs/Graphics/src/: CMakeLists.txt  render.cpp  render.h
libs/ResourceLoader/src/: CMakeLists.txt
libs/SharedHelper/: CMakeLists.txt
libs/SharedHelper/demo/: demo.cpp
libs/SharedHelper/src/: CMakeLists.txt
libs/game-helper/include/game/: camera.h  mouse.h
libs/game-helper/src/: CMakeLists.txt  camera.cpp  mouse.cpp
libs/internal-resource-loader/src/: CMakeLists.txt  assimp_loader.cpp  vertex_model.cpp
libs/opengl-render/: CMakeLists.txt  shader.cpp
libs/opengl-render/resources/: font_loader.cpp
libs/opengl/glad-include/glad/: glad.h
libs/opengl/src/: CMakeLists.txt  framebuffer.cpp  framebuffer.h  glad.c  ogl_helper.cpp  ogl_helper.h  render.cpp  render.h  shader.cpp  shader.h  shader_buffers.cpp  shader_buffers.h  spirv_shaders.cpp  spirv_shaders.h
libs/opengl/src/resources/: model_loader.cpp  model_loader.h  resource_pool.cpp  resource_pool.h  texture_loader.cpp  texture_loader.h  vertex_data.cpp  vertex_data.h
libs/render-api/: CMakeLists.txt
libs/render-api/src/: CMakeLists.txt  animation.cpp  default_vertex_types.cpp  pipeline.cpp
libs/render-internal/: CMakeLists.txt
libs/render-internal/src/: CMakeLists.txt  assimp_loader.h  font_loader.cpp  model_loader.cpp  shader_buffers.cpp  stb_image_impl.cpp  texture_loader.cpp  vertex_model.cpp
libs/vulkan/: CMakeLists.txt
libs/vulkan-render/: CMakeLists.txt
libs/vulkan/src/: CMakeLists.txt  device_state.h  pipeline.cpp  pipeline.h  pipeline_data.cpp  pipeline_data.h  render.cpp  render.h  renderpass.cpp  renderpass.h  shader.cpp  shader.h  shader_buffers.cpp  shader_buffers.h  shader_internal.cpp  shader_internal.h  shader_structs.h  vkhelper.cpp  vkhelper.h  vulkan_manager.cpp  vulkan_manager.h
libs/vulkan/src/parts/: #core.cpp#  .#core.cpp  command.h  core.h  descriptors.cpp  descriptors.h  images.cpp  images.h  pipeline.cpp  pipeline.h  swapchain.cpp  swapchain.h  threading.cpp  threading.h
libs/vulkan/src/parts/helper/: choose_physical_device.cpp  choose_physical_device.h  device.cpp  device.h
libs/vulkan/src/resources/: model_loader.cpp  model_loader.h  resource_pool.cpp  resource_pool.h  texture_loader.cpp  texture_loader.h
resources/buildscripts/linux/: debug.sh  debugOpenGL.sh  debugVulkan.sh  release.sh  releaseVulkan.sh
resources/buildscripts/windows/: debug.bat  debugOpenGL.bat  debugVulkan.bat
resources/models/: README.md
resources/shaders/opengl/: #blinnphong.frag#  3D-lighting-anim.vert  3D-lighting.vert  final.frag
resources/shaders/opengl-converted/: 3D-lighting-anim.vert  3D-lighting.vert  blinnphong.frag  final.frag  final.vert  flat.frag  flat.vert
resources/shaders/vulkan/: 3D-lighting-anim.vert  3D-lighting-anim.vert.spv  3D-lighting.vert  3D-lighting.vert.spv  blinnphong.frag  final.frag  final.frag.spv  test.frag  test.frag.spv
src/: #app.cpp#  .#app.cpp  CMakeLists.txt  app.cpp  app.h  camera.cpp  camera.h  keyboard.cpp  main.cpp  manager.cpp  manager.h  model_animation.cpp  model_gen.cpp  random.cpp  render.cpp  render.h  stb_image_impl.cpp
src/opengl-render/: render.cpp  render.h
src/opengl-render/resources/: model_loader.cpp  resources.h
src/render/: render.cpp  render.h
src/render/opengl-render/: render.cpp  render.h  shader.h
src/render/opengl-render/resources/: font_loader.h  model_loader.cpp  model_loader.h  texture_loader.cpp  texture_loader.h  vertex_data.cpp  vertex_data.h
src/render/render-shared/resources/: resources.h
src/render/render-shared/resources/model/: model_animation.cpp
src/render/vulkan-render/: render.cpp  render.h
src/render/vulkan-render/resources/: font_loader.h  model_loader.cpp  model_loader.h  model_render.h  texture_loader.cpp  texture_loader.h
src/vulkan-render/: render.cpp
src/vulkan-render/parts/: primary.h  render_style.cpp  render_style.h  swapchain.h
src/vulkan-render/resources/: texture_loader.h
src/vulkan-render/resources/model/: #custom_geometry.h#
(+42 files in other folders)
